Migrate to Apache HttpClient 5